Internal Error memory/allocation.cpp:179

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b89
    • Verified

        Got this crash in JPRT while trying to sync hs --> hs-comp.

        Internal Error (/opt/jprt/T/P1/071121.drlong/s/hotspot/src/share/vm/memory/allocation.cpp:179), pid=11898, tid=11899
        # assert(~(_allocation_t[0] | allocation_mask) != (uintptr_t)this || !is_type_set()) failed: embedded or stack only, this(0x00002aaaaac2d2f0) type 0 a[0]=(0xffffd555553d2d0f) a[1]=(0x00002aaaaac2d300)

              Assignee:
              Dean Long
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: