8140452: Internal Error memory/allocation.cpp:179

Use const ref & and avoid copy ctor

Reviewed-by: coleenp